Seperates css via smaccs

--- a/index.html
+++ b/index.html
@@ -6,41 +6,39 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="module.css">
+    <link rel="stylesheet" href="state.css">
   </head>
   <body>
     <div class="main-content">
-      <div class="top-main-right">
+      <div class="top-main-left">
         <div class="logo-holder">
           <img class ="techi-logo" src="logo.png" alt="techi logo"/>
         </div>
-        <ul>
-          <li>Contact us</li>
-          <li>Meet the team</li>
-          <li>Home</li>
+        <ul class = "main-content-ul">
+          <li class= "main-content-li">Contact us</li>
+          <li  class= "main-content-li">Meet the team</li>
+          <li  class= "main-content-li">Home</li>
         </ul>
       </div>
       <div class="banner">
-        <img src="coffee.png" alt="banner">
+        
         <h1 class = "banner-text">Meet The Team</h1>
       </div>
       <div class="main-images">
         <div class="main-centering">
           <div class="brook">
-            <img src="" alt="" class="brook-image">
             <div class="brook-tag">
-
             </div>
           </div>
           <div class="jake">
-            <img src="" alt="" class="jake-image">
             <div class="jake-tag">
-
             </div>
           </div>
           <div class="allef" >
-            <img src="" alt="" class="allef-image">
             <div class="allef-tag">
-
             </div>
           </div>
         </div>
@@ -61,31 +59,29 @@
     <div class="sidebar">
       <div class="sidebar-top">
         <div class="relative"><i class="fa fa-times close" aria-hidden="true"></i></div>
-        <img class ="alternate-logo" src="logo.png" alt="second techi logo">
+        <img class ="alternate-logo sidebar-top-img" src="logo.png" alt="second techi logo">
       </div>
-      <ul>
+      <ul class= "sidebar-ul">
         <div class="relative">
-          <li class = "home">Home</li>
+          <li class = "sidebar-li">Home</li>
         </div>
-        <li>Meet the team</li>
-        <li>Contact Us</li>
+        <li class= "sidebar-li">Meet the team</li>
+        <li class="sidebar-li">Contact Us</li>
       </ul>
       <div class="sidebar-images">
         <div class="sidebar-centering">
           <div class="brook-sidebar">
-            <img src="" alt="" class="brook-side-image">
             <div class="brook-tag">
 
             </div>
           </div>
           <div class="jake-sidebar">
-            <img src="" alt="" class="jake-side-image">
             <div class="jake-tag">
 
             </div>
           </div>
           <div class="allef-sidebar">
-            <img src="" alt="" class="allef-side-image">
+
             <div class="allef-tag">
 
             </div>
