Makes site responsive to browser size  changes.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="module.css">
+    <link rel="stylesheet" href="modules.css">
     <link rel="stylesheet" href="state.css">
   </head>
   <body>
@@ -24,7 +24,7 @@
         </ul>
       </div>
       <div class="banner">
-        
+
         <h1 class = "banner-text">Meet The Team</h1>
       </div>
       <div class="main-images">
@@ -61,13 +61,15 @@
         <div class="relative"><i class="fa fa-times close" aria-hidden="true"></i></div>
         <img class ="alternate-logo sidebar-top-img" src="logo.png" alt="second techi logo">
       </div>
-      <ul class= "sidebar-ul">
-        <div class="relative">
-          <li class = "sidebar-li">Home</li>
-        </div>
-        <li class= "sidebar-li">Meet the team</li>
-        <li class="sidebar-li">Contact Us</li>
-      </ul>
+      <div class="sidebar-ul-container">
+        <ul class= "sidebar-ul">
+
+            <li class = "sidebar-li">Home</li>
+
+          <li class= "sidebar-li">Meet the team</li>
+          <li class="sidebar-li">Contact Us</li>
+        </ul>
+      </div>
       <div class="sidebar-images">
         <div class="sidebar-centering">
           <div class="brook-sidebar">
